updated code to jdk 11